    * Filtering: added year suffix for date filters in the collection browser.
    * Last.fm features that require user authentication are now disabled
      by default.
    * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
      Patch by Richard Longland <rlongland@hotmail.com>.

  BUGFIXES:
    * Fixed "genre" and other playlist groupings not working. (BR 243344)
    * Removed track progress effect on TrayIcon as it caused several problems
      (also caused by a bogus implementation of the KSNI class)
      (BR 233506, BR 240463, BR 231539, BR 232578, BR 232312).
    * Fixed track name in main window title incorrectly changing when editing
      tag info for another track. Thanks to Anton Gritsay <anton@angri.ru> for
      the patch (BR 220521)
    * Splitted desktop so mime types can be allocated in a better way
      (BR 242292).
    * Fixed some tracks not being scanned when they had corrupted MusicBrainz
      IDs. Thanks to Matěj Laitl <matej@laitl.cz> for the patch. (BR 236227)
    * Fixed crash when navigating using "Places" in the file browser. (BR 240338)
    * Fixed error dialog popup if the stored directory is no longer accessible
      when using the file browser. (BR 234286)
    * Single clicking a file in the file browser now selects it instead of
      appending to the playlist by default in single-click mode. (BR 233171)
    * Fixed resizing and eliding issues with the file browser breadcrumbs.
      (BR 231366 comment #5)
    * Drop file icons in file browser breadcrumbs. (BR 231366)
    * Fixed keyboard navigation in file browser. (BR 240668)
      Patch thanks to Hannes Koller.
    * Fixed dropping files to playlist from Konqueror. (BR 235722)
    * Fixed keyboard shortcuts of actions from scripts lost after restart.
      Thanks to Martin Blumenstingl <darklight.xdarklight@googlemail.com>.
      (BR 223165)
    * Fixed tracks not changing for "stop after this track" action. (BR 231209)